Change all URLs to point to new nectarine.
The system administrator of the incarnation of nectarine
hosted on scenemusic.net no long has the motivation to
continue the great service gifted to us all. Others have
picked up the pieces and made a new one over at scenestream.net

--- a/config.ini
+++ b/config.ini
@@ -3,5 +3,5 @@
 id                  = plugin.audio.nectarine
 
 [urls]
-stream_xml          = https://www.scenemusic.net/demovibes/xml/streams/
-history_xml         = https://www.scenemusic.net/demovibes/xml/queue/
+stream_xml          = https://www.scenestream.net/demovibes/xml/streams/
+history_xml         = https://www.scenestream.net/demovibes/xml/queue/
